<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_back"
        android:icon="@drawable/back"
        android:title="@string/back"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/forward"
        android:title="@string/forward"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_reload"
        android:icon="@drawable/refreshedit"
        android:title="@string/reload"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_stop"
        android:icon="@drawable/error"
        android:title="@string/stop"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/trash"
        android:title="@string/settings"
        app:showAsAction="always" />

</menu>
